Fix icon alignment in pills

--- a/ui/components/buttons/flavors/base/index.scss
+++ b/ui/components/buttons/flavors/base/index.scss
@@ -75,7 +75,7 @@
     }
   }
 
-  svg {
+  &:not(.#{$css-prefix}pill__remove) svg {
     position: relative;
     top: -1px;
   }
